--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prisma": "prisma"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^4.16.2",
     "@remix-run/dev": "^2.0.0",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
@@ -29,7 +29,8 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-api": "^8.0.2",
     "@shopify/shopify-app-remix": "^2.1.0",
-    "@shopify/shopify-app-session-storage-prisma": "^2.0.0",
+    "@shopify/shopify-app-session-storage-prisma": "^2.0.2",
+    "@shopify/hydrogen-react": "latest",
     "isbot": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
