--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "image-captioner",
+  "name": "stable-sale-app",
   "private": true,
   "scripts": {
-    "build": "remix build",
+    "build": "tsc && remix build",
     "predev": "prisma generate && prisma migrate deploy",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
@@ -16,36 +16,37 @@
     "setup": "prisma generate && prisma migrate deploy",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.8.0",
     "@remix-run/dev": "^2.0.0",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
-    "@shopify/app": "3.52.0",
-    "@shopify/cli": "3.52.0",
+    "@shopify/app": "3.54.0",
+    "@shopify/cli": "3.54.0",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-api": "^8.0.2",
-    "@shopify/shopify-app-remix": "^2.1.0",
-    "@shopify/shopify-app-session-storage-prisma": "^2.0.2",
-    "@shopify/hydrogen-react": "latest",
-    "isbot": "latest",
+    "@shopify/shopify-api": "^9.0.2",
+    "@shopify/shopify-app-remix": "^2.4.0",
+    "@shopify/shopify-app-session-storage-prisma": "^3.0.0",
+    "isbot": "^4.1.0",
+    "prisma": "^5.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/eslint-config": "^2.0.0",
-    "@shopify/app-bridge-types": "^0.0.3",
+    "@shopify/api-codegen-preset": "^0.0.1",
+    "@shopify/app-bridge-types": "^0.0.5",
     "@types/eslint": "^8.40.0",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
-    "prisma": "^5.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.4",
     "typescript": "^5.2.2"
   },
   "workspaces": [
