--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
     "build": "tsc && remix build",
     "predev": "prisma generate && prisma migrate deploy",
     "dev": "shopify app dev",
-    "config:link": "shopify app config link",
-    "config:push": "shopify app config push",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
@@ -25,8 +23,8 @@
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
-    "@shopify/app": "3.54.0",
-    "@shopify/cli": "3.54.0",
+    "@shopify/app": "^3.56.1",
+    "@shopify/cli": "^3.56.1",
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-api": "^9.0.2",
     "@shopify/shopify-app-remix": "^2.4.0",
