Add a pubsub handler for product creation webhooks

--- a/deploy.yml
+++ b/deploy.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Apply all pending migrations to the database
         run: npx prisma migrate deploy
         env:
-          DATABASE_URL: ${{ secrets.GCP_MYSQL_URL }}
+          DATABASE_URL: ${{ secrets.GOOGLE_MYSQL_URL }}
