--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.3.2",
     "@prisma/client": "^5.8.0",
     "@remix-run/dev": "^2.0.0",
     "@remix-run/node": "^2.0.0",
