--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
     "prisma": "prisma",
+    "test": "jest",
     "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
@@ -24,7 +25,7 @@
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
-    "@shopify/app": "^3.56.1",
+    "@shopify/app": "^3.15.0",
     "@shopify/app-bridge-types": "^0.0.5",
     "@shopify/cli": "^3.56.1",
     "@shopify/polaris": "^12.0.0",
@@ -37,16 +38,24 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@remix-run/eslint-config": "^2.0.0",
     "@shopify/api-codegen-preset": "^0.0.1",
     "@types/eslint": "^8.40.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.6.3",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.4.5"
   },
   "workspaces": [
     "extensions/*"
