--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "a556031e8a54b39c2ccb91895fd1045b"
 name = "image-captioner"
-application_url = "https://yes-publication-cave-fell.trycloudflare.com"
+application_url = "https://f28c-2605-59c8-30dc-ae10-d86d-8c00-de4b-8373.ngrok-free.app"
 embedded = true
 
 [build]
@@ -15,9 +15,9 @@ scopes = "read_product_listings,read_products,write_products"
 
 [auth]
 redirect_urls = [
-  "https://yes-publication-cave-fell.trycloudflare.com/auth/callback",
-  "https://yes-publication-cave-fell.trycloudflare.com/auth/shopify/callback",
-  "https://yes-publication-cave-fell.trycloudflare.com/api/auth/callback"
+  "https://f28c-2605-59c8-30dc-ae10-d86d-8c00-de4b-8373.ngrok-free.app/auth/callback",
+  "https://f28c-2605-59c8-30dc-ae10-d86d-8c00-de4b-8373.ngrok-free.app/auth/shopify/callback",
+  "https://f28c-2605-59c8-30dc-ae10-d86d-8c00-de4b-8373.ngrok-free.app/api/auth/callback"
 ]
 
 [webhooks]
