--- a/package.json
+++ b/package.json
@@ -2,26 +2,32 @@
   "name": "stable-sale-app",
   "private": true,
   "scripts": {
-    "build": "tsc && remix build",
-    "predev": "prisma generate && prisma migrate deploy",
-    "dev": "shopify app dev",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "remix-serve build/index.js",
-    "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
     "prisma": "prisma",
     "test": "jest",
-    "graphql-codegen": "graphql-codegen"
+    "graphql-codegen": "graphql-codegen",
+
+    "build": "tsc && remix vite:build",
+    "predev": "prisma generate && prisma migrate deploy && npm run build",
+    "dev": "node ./server.js",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "cross-env NODE_ENV=production node ./server.js",
+
+    "deprecated-dev": "shopify app dev",
+    "deprecated-build": "tsc && remix build",
+    "deprecated-start": "remix dev -c 'node server.mjs'",
+    "deprecated-docker-start": "npm run setup && npm run start"
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.3.2",
     "@prisma/client": "^5.8.0",
     "@remix-run/dev": "^2.0.0",
+    "@remix-run/express": "^2.11.2",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
@@ -32,10 +38,15 @@
     "@shopify/shopify-api": "^9.0.2",
     "@shopify/shopify-app-remix": "^2.4.0",
     "@shopify/shopify-app-session-storage-prisma": "^3.0.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "isbot": "^4.1.0",
+    "morgan": "^1.10.0",
     "prisma": "^5.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -43,8 +54,11 @@
     "@babel/preset-typescript": "^7.24.7",
     "@remix-run/eslint-config": "^2.0.0",
     "@shopify/api-codegen-preset": "^0.0.1",
+    "@types/compression": "^1.7.5",
     "@types/eslint": "^8.40.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.6.3",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.31",
@@ -55,7 +69,9 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "workspaces": [
     "extensions/*"
