--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "graphql-codegen": "graphql-codegen",
 
     "build": "tsc && remix vite:build",
-    "predev": "prisma generate && prisma migrate deploy && npm run build",
-    "dev": "node ./server.js",
+    "predev": "npm run setup && npm run build",
+    "dev": "node ./server.mjs",
+    "vdev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "cross-env NODE_ENV=production node ./server.js",
+    "start": "cross-env NODE_ENV=production node ./server.mjs",
 
     "deprecated-dev": "shopify app dev",
     "deprecated-build": "tsc && remix build",
@@ -25,30 +26,32 @@
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.3.2",
-    "@prisma/client": "^5.8.0",
-    "@remix-run/dev": "^2.0.0",
-    "@remix-run/express": "^2.11.2",
-    "@remix-run/node": "^2.0.0",
-    "@remix-run/react": "^2.0.0",
-    "@remix-run/serve": "^2.0.0",
+    "@prisma/client": "^5.17.0",
+    "@remix-run/express": "^2.9.2",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
     "@shopify/app": "^3.15.0",
+    "@shopify/shopify-api": "^10.0.0",
     "@shopify/app-bridge-types": "^0.0.5",
     "@shopify/cli": "^3.56.1",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-api": "^9.0.2",
     "@shopify/shopify-app-remix": "^2.4.0",
-    "@shopify/shopify-app-session-storage-prisma": "^3.0.0",
+    "@shopify/shopify-app-session-storage": "^2.1.4",
+    "@shopify/shopify-app-session-storage-prisma": "^4.0.5",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "isbot": "^4.1.0",
     "morgan": "^1.10.0",
-    "prisma": "^5.8.0",
+    "prisma": "^5.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@remix-run/dev": "*",
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
