--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "include": ["**/*.ts", "**/*.tsx"],
   "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "strict": true,
     "skipLibCheck": true,
@@ -11,15 +13,13 @@
     "noEmit": true,
     "allowJs": true,
     "jsx": "react-jsx",
-    "module": "Node16",
-    "moduleResolution": "Node16",
     "target": "ES2019",
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
     },
     "types": [
-      "node", "@shopify/app-bridge-types"
+      "@remix-run/node", "vite/client", "@shopify/app-bridge-types"
     ]
   }
 }
