--- a/package.json
+++ b/package.json
@@ -1,69 +1,64 @@
 {
-  "name": "stable-sale-app",
+  "name": "visionati",
   "private": true,
   "scripts": {
+    "build": "remix vite:build",
+    "shopify:dev": "shopify app dev",
+    "dev": "tsx ./server.ts",
+    "prestart": "npm run build",
+    "start": "NODE_ENV=production tsx ./server.ts",
+    "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
+    "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
     "prisma": "prisma",
-    "test": "jest",
     "graphql-codegen": "graphql-codegen",
-
-    "build": "tsc && remix vite:build",
-    "predev": "npm run setup && npm run build",
-    "dev": "node ./server.mjs",
-    "vdev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "cross-env NODE_ENV=production node ./server.mjs",
-
-    "deprecated-dev": "shopify app dev",
-    "deprecated-build": "tsc && remix build",
-    "deprecated-start": "remix dev -c 'node server.mjs'",
-    "deprecated-docker-start": "npm run setup && npm run start"
+    "vite": "vite",
+    "test": "jest"
+  },
+  "type": "module",
+  "engines": {
+    "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
-    "@google-cloud/pubsub": "^4.3.2",
-    "@prisma/client": "^5.17.0",
-    "@remix-run/express": "^2.9.2",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
-    "@shopify/app": "^3.15.0",
-    "@shopify/shopify-api": "^10.0.0",
-    "@shopify/app-bridge-types": "^0.0.5",
-    "@shopify/cli": "^3.56.1",
+    "@prisma/client": "^5.11.0",
+    "@remix-run/dev": "^2.7.1",
+    "@remix-run/node": "^2.7.1",
+    "@remix-run/react": "^2.7.1",
+    "@remix-run/serve": "^2.7.1",
+    "@shopify/app-bridge-react": "^4.1.2",
+    "@shopify/cli": "^3.66.1",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-app-remix": "^2.4.0",
-    "@shopify/shopify-app-session-storage": "^2.1.4",
-    "@shopify/shopify-app-session-storage-prisma": "^4.0.5",
+    "@shopify/shopify-app-remix": "^3.0.2",
+    "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "compression": "^1.7.4",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "isbot": "^4.1.0",
+    "isbot": "^5.1.0",
     "morgan": "^1.10.0",
-    "prisma": "^5.17.0",
+    "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "tsx": "^4.19.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "*",
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@remix-run/eslint-config": "^2.0.0",
-    "@shopify/api-codegen-preset": "^0.0.1",
-    "@types/compression": "^1.7.5",
+    "@remix-run/eslint-config": "^2.7.1",
+    "@shopify/api-codegen-preset": "^1.1.1",
+    "@types/compression": "*",
     "@types/eslint": "^8.40.0",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.6.3",
-    "@types/node-fetch": "^2.6.11",
+    "@types/express": "*",
+    "@types/morgan": "*",
+    "@types/node": "^22.2.0",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "babel-jest": "^29.7.0",
@@ -72,9 +67,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "ts-jest": "^29.1.5",
-    "typescript": "^5.4.5",
-    "vite": "^5.4.2",
-    "vite-tsconfig-paths": "^5.0.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.1.3"
   },
   "workspaces": [
     "extensions/*"
@@ -82,5 +76,7 @@
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
   ],
+  "resolutions": {},
+  "overrides": {},
   "author": "haydenerickson"
 }
