--- a/shopify.web.toml
+++ b/shopify.web.toml
@@ -3,7 +3,5 @@ roles = ["frontend", "backend"]
 webhooks_path = "/webhooks"
 
 [commands]
-dev = "npm exec remix dev"
-
-[hmr_server]
-http_paths = ["/ping"]
+predev = "npx prisma generate"
+dev = "npx prisma migrate deploy && npm exec remix vite:dev"
