remove unused files and recreate webhook subscription

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.7.0",
     "@prisma/client": "^5.11.0",
     "@remix-run/dev": "^2.7.1",
     "@remix-run/node": "^2.7.1",
