--- a/package.json
+++ b/package.json
@@ -1,51 +1,75 @@
 {
-  "name": "image-captioner",
+  "name": "visionati",
   "private": true,
   "scripts": {
-    "build": "remix build",
-    "predev": "prisma generate && prisma migrate deploy",
-    "dev": "shopify app dev",
+    "build": "remix vite:build",
+    "shopify:dev": "shopify app dev --tunnel-url 'https://f28c-2605-59c8-30dc-ae10-d86d-8c00-de4b-8373.ngrok-free.app:3000'",
+    "dev": "tsx ./server.ts",
+    "prestart": "npm run setup && npm run build",
+    "start": "NODE_ENV=production tsx ./server.ts",
     "config:link": "shopify app config link",
-    "config:push": "shopify app config push",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "remix-serve build/index.js",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "graphql-codegen": "graphql-codegen",
+    "vite": "vite",
+    "test": "jest"
+  },
+  "type": "module",
+  "engines": {
+    "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.0",
-    "@remix-run/dev": "^2.0.0",
-    "@remix-run/node": "^2.0.0",
-    "@remix-run/react": "^2.0.0",
-    "@remix-run/serve": "^2.0.0",
-    "@shopify/app": "3.52.0",
-    "@shopify/cli": "3.52.0",
+    "@google-cloud/pubsub": "^4.7.0",
+    "@prisma/client": "^5.11.0",
+    "@remix-run/dev": "^2.7.1",
+    "@remix-run/node": "^2.7.1",
+    "@remix-run/react": "^2.7.1",
+    "@remix-run/serve": "^2.7.1",
+    "@shopify/app-bridge-react": "^4.1.2",
+    "@shopify/cli": "^3.66.1",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-api": "^8.0.2",
-    "@shopify/shopify-app-remix": "^2.1.0",
-    "@shopify/shopify-app-session-storage-prisma": "^2.0.0",
-    "isbot": "latest",
+    "@shopify/shopify-app-remix": "^3.0.2",
+    "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
+    "isbot": "^5.1.0",
+    "morgan": "^1.10.0",
+    "prisma": "^5.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "tsx": "^4.19.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
-    "@remix-run/eslint-config": "^2.0.0",
-    "@shopify/app-bridge-types": "^0.0.3",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@remix-run/eslint-config": "^2.7.1",
+    "@shopify/api-codegen-preset": "^1.1.1",
+    "@types/compression": "*",
     "@types/eslint": "^8.40.0",
-    "@types/node": "^20.6.3",
+    "@types/express": "*",
+    "@types/morgan": "*",
+    "@types/node": "^22.2.0",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
-    "prisma": "^5.7.0",
-    "typescript": "^5.2.2"
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.3"
   },
   "workspaces": [
     "extensions/*"
@@ -53,5 +77,7 @@
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
   ],
+  "resolutions": {},
+  "overrides": {},
   "author": "haydenerickson"
 }
