--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,27 +1,32 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-name = "image-captioner"
 client_id = "a556031e8a54b39c2ccb91895fd1045b"
-application_url = "https://nano-shaw-nominations-horses.trycloudflare.com"
+name = "image-captioner"
+handle = "image-captioner"
+application_url = "https://integration-wrong-overnight-undertaken.trycloudflare.com"
 embedded = true
-
-[access_scopes]
-# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
-
-[auth]
-redirect_urls = [
-  "https://nano-shaw-nominations-horses.trycloudflare.com/auth/callback",
-  "https://nano-shaw-nominations-horses.trycloudflare.com/auth/shopify/callback",
-  "https://nano-shaw-nominations-horses.trycloudflare.com/api/auth/callback"
-]
-
-[webhooks]
-api_version = "2023-10"
-
-[pos]
-embedded = false
 
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "image-captioner-testing.myshopify.com"
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
+scopes = "read_product_listings,read_products,write_products"
+
+[auth]
+redirect_urls = [
+  "https://integration-wrong-overnight-undertaken.trycloudflare.com/auth/callback",
+  "https://integration-wrong-overnight-undertaken.trycloudflare.com/auth/shopify/callback",
+  "https://integration-wrong-overnight-undertaken.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2024-04"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks"
+
+[pos]
+embedded = false
