--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.18.2",
     "isbot": "^5.1.0",
     "morgan": "^1.10.0",
+    "pino": "^9.4.0",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
