--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,31 @@
-version: '3.7'
-
 services:
-  mysql:
-    hostname: ${MYSQL_HOST}
-    image: mysql/mysql-server:latest
+  db:
+    image: mysql/mysql-server:8.0.32
+    command:
+      - "mysqld"
+      - "--character-set-server=utf8mb4"
+      - "--collation-server=utf8mb4_unicode_ci"
+    volumes:
+      - "./db:/var/lib/mysql"
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_PWD}
-      MYSQL_ROOT_HOST: '%'
+      - "TZ"
+      - "MARIADB_RANDOM_ROOT_PASSWORD=yes"
+      - "MYSQL_DATABASE=shopify"
+      - "MYSQL_USER=shopify"
+      - "MYSQL_PASSWORD=shopify"
+    restart: always
     healthcheck:
-          test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-          timeout: 20s
-          retries: 10
+      test: ["CMD", "mysqladmin", "ping", "-u", "shopify", "--password=shopify", "-h", "localhost"]
+      timeout: 5s
+      retries: 30
 
   app:
     image: image-captioner-node
     ports:
       - "3000:3000"
     depends_on:
-      mysql:
+      db:
         condition: service_healthy
         restart: true
+    environment:
+      - "GOOGLE_MYSQL_URL=mysql://shopify:shopify@db:3306/shopify"
