Ignore google creds and docker compose db

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ node_modules
 /prisma/dev.sqlite
 /prisma/dev.sqlite-journal
 database.sqlite
+image-captioner-*.json
+/db
 
 .env
 package-lock.json
